prepare for the new branch

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -11,4 +11,5 @@ spring:
     active: native
   security:
     user:
-      password: ${CONFIGURATION_SERVER_PASSWORD}
+      password: 12345
+      name: user
