--- a/config-server/src/main/resources/services/auth-service.yml
+++ b/config-server/src/main/resources/services/auth-service.yml
@@ -1,7 +1,7 @@
 # Data Source setting
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/mister_keeper
+    url: jdbc:postgresql://localhost:5432/mister_keeper_auth
     username: postgres
     password: 171988Ghost
   jpa:
@@ -17,4 +17,4 @@ spring:
 server:
   servlet:
     context-path: /uaa
-  port: 5000
+  port: 6000
