--- a/music-service/pom.xml
+++ b/music-service/pom.xml
@@ -3,12 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>keeper-config-server</artifactId>
+    <artifactId>keeper-music-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
-    <name>config-server</name>
-    <description>Configuration server for Mister Keeper application platform</description>
+    <name>music-service</name>
+    <description>Manage your play lists</description>
 
     <parent>
         <groupId>corp.siendev.com</groupId>
@@ -16,21 +14,26 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <properties>
-        <start-class>com.thoughtmechanix.confsvr.ConfigServerApplication </start-class>
-        <java.version>1.8</java.version>
-        <docker.image.name>johncarnell/tmx-confsvr</doc
-        <docker.image.tag>chapter3</docker.image.tag>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -44,9 +47,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <finalName>${project.name}</finalName>
-                </configuration>
             </plugin>
         </plugins>
     </build>
