--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.SR3</spring-cloud.version>
+		<lombok.version>1.18.20</lombok.version>
 	</properties>
 
 	<dependencyManagement>
@@ -30,6 +31,11 @@
 				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>${lombok.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -42,5 +48,6 @@
 		<module>music-service</module>
         <module>statistic-service</module>
         <module>monitoring-service</module>
+        <module>movie-service</module>
     </modules>
 </project>
