--- a/config-server/src/main/resources/services/auth-service.yml
+++ b/config-server/src/main/resources/services/auth-service.yml
@@ -2,8 +2,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/mister_keeper_auth
-    username: postgres
-    password: 171988Ghost
+    username:
+    password:
   jpa:
     properties:
       hibernate:
