--- a/pom.xml
+++ b/pom.xml
@@ -7,20 +7,19 @@
 	<artifactId>app-mister-keeper</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>app-mister-keeper</name>
-	<description>Gather your personal information together</description>
+	<name>Mister Keeper</name>
+	<description>Movies, Books, Games, etc. all in one place. Collect and share with others.</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.8.RELEASE</version>
+		<version>2.7.3</version>
 		<relativePath/>
 	</parent>
 
 	<properties>
-		<java.version>1.8</java.version>
-		<spring-cloud.version>Greenwich.SR3</spring-cloud.version>
-		<lombok.version>1.18.20</lombok.version>
+		<java.version>18</java.version>
+		<spring-cloud.version>2021.0.3</spring-cloud.version>
 	</properties>
 
 	<dependencyManagement>
@@ -31,11 +30,6 @@
 				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.projectlombok</groupId>
-				<artifactId>lombok</artifactId>
-				<version>${lombok.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
