--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -17,10 +17,8 @@
     </parent>
 
     <properties>
-        <start-class>com.thoughtmechanix.confsvr.ConfigServerApplication </start-class>
-        <java.version>1.8</java.version>
-        <docker.image.name>johncarnell/tmx-confsvr</doc
-        <docker.image.tag>chapter3</docker.image.tag>
+        <java.version>18</java.version>
+        <docker.image.name>${project.name}</docker.image.name>
     </properties>
 
     <dependencies>
@@ -31,6 +29,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
