updated configuration server

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -4,6 +4,10 @@ server:
 spring:
   application:
     name: config-server
+  security:
+    user:
+      name: user
+      password: password
   cloud:
     config:
       server:
